<resources>
    <string name="app_name">Bentorlan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titlevr">Login To Your Account</string>
    <string name="belum_punya_akun"><font color='#4CAF50'>Belum punya akun? Klik disini untuk </font><font color='#926E00'>Daftar</font></string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="sign_up">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="movie_title">Movie Title</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="todo">TODO</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="nama">nama</string>
    <string name="motor_anda_mengalami_masalah_apa">Motor Anda Mengalami Masalah Apa ?</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_motor">Jenis Motor :</string>
    <string name="merk_motor">Merk Motor :</string>
    <string name="lainnya">Lainnya</string>
    <string name="sport">Sport</string>
    <string name="bebek">Bebek</string>
    <string name="matic">Matic</string>
    <string name="tipe_motor">Tipe Motor :</string>
    <string name="tambahan">Tambahan :</string>
    <string name="batal">Batal</string>
    <string name="panggil_sekarang">Panggil Sekarang</string>
    <string name="darurat">Darurat</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="kami_siap_memperbaiki_motor_anda" />
    <string name="perbaikan" />
    <string name="tanggal_perbaikan" />
    <string name="apa_yang_mau_diperbaiki">Apa yang mau diperbaiki ?</string>
    <string name="tanggalperbaikan">Tanggal Perbaikan</string>
    <string name="perbaikan_rutin">Perbaikan Rutin</string>
    <string name="apa_yang_dibutuhkan_motor_anda">Apa yang dibutuhkan motor anda ?</string>
    <string name="jam_perbaikan">Jam Perbaikan</string>
    <string name="suku_cadang_apa_yang_diperlukan">Suku cadang apa yang diperlukan ?</string>
    <string name="coolant_pendingin">Coolant/Pendingin</string>
    <string name="peredam_kejut">Peredam Kejut</string>
    <string name="battery_aki">Battery / Aki</string>
    <string name="disc_cluct">Disc Cluct</string>
    <string name="piston">Piston</string>
    <string name="drivebelt_vanbelt">Drivebelt/Vanbelt</string>
    <string name="spark_blug_busi">Spark Blug/Busi</string>
    <string name="kampas_rem">Kampas Rem</string>
    <string name="jam_perbaikann">Jam Perbaikan</string>
    <string name="suku_cadang">Suku Cadang</string>
    <string name="kembali">kembali</string>
    <string name="sign_in_with_google">Sign In with Google</string>
</resources>